idf_component_register(SRCS 
                        "sha256.c" 
                        "filterTags.c" 
                        "rbCommandProc.c" 
                        "uartFunctions.c" 
                        "epcDisect.c" 
                        "rBell.c" 
                        "rbell_project_main.c"
                    INCLUDE_DIRS "." 
                         "include"
                    )
